# Davis

./: .gitignore  README.md
BD_Generation/: 00_constraint_llm_workflow.md  00_deep_research_reward_design_considerations.md  00_fake_examples_guidance_stats.md  00_masked_diffusion_conceptual_overview.md  00_my_guidance_pipeline_proposal.md  CLAUDE.md  Claude_plan_guidance.md  Makefile  README.md  changes_for_sound_comparisons.md  constrains_examples.md  discussion_research_T1.md  google_cloud_usage_efficiency.md  handoff_T1.md  handoff_T1_data_pipeline.md  handoff_T1_part2.md  handoff_T1_phase5_eval.md  handoff_eval_upgrade.md  handoff_eval_upgrade_complete.md  handoff_g5_round5_remasking.md  handoff_remasking_llada_reruns.md  handoff_remdm_remasking.md  handoff_round6_results.md  handoff_systematic_comparison.md  handoff_v2_learned_forward_process.md  handoff_vectorized_scoring_round7.md  implementation_state_T1.md  implementation_state_T1_guidance.md  inside_surrounding_rules.md  planning_T1.md  planning_T1_guidance.md  planning_T1_with_fixed_forward_process.md  planning_T1_with_learned_forward_process.md  pyproject.toml  remasking_design.md  remasking_design_with_fixed_forward_process.md  remasking_design_with_learned_forward_process.md  remasking_doubts.md  research_T1.md  structural_differences_between_our_v1_vs_mdlm.md  (+1 more)
BD_Generation/bd_gen/: __init__.py
BD_Generation/configs/: config.yaml
BD_Generation/docs/: dataset.md  denoising_eval.md  diffusion.md  evaluation.md  graph2plan_loader.md  guidance.md  guidance_aware_remasking_schedule.md  model.md  training.md  (+2 more)
(+245 files in other folders)
