[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bd-gen"
version = "0.1.0"
description = "MDLM-based bubble diagram generator for residential floorplans"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "scipy>=1.11.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "networkx>=3.1",
    "matplotlib>=3.7.0",
    "wandb>=0.16.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "ipykernel>=6.25.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["bd_gen*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
